# sixarms

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  dev-tracker-v2-spec.md  dev-tracker-v2.1-ui-spec.md  index.html  package-lock.json  package.json  quick-entry.html  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/plans/: 2025-01-04-commercialization-design.md  2026-01-03-auto-update-mechanism.md  2026-01-03-dev-tracker-v2-optimization-design.md  2026-01-03-dev-tracker-v2-phase1-implementation.md  2026-01-04-ai-action-detection.md  2026-01-04-chatbot-history-optimization.md  2026-01-04-landing-page-design.md  2026-01-04-sixarms-remaining-work-plan.md  2026-01-04-ui-architecture-fixes-plan.md  2026-01-05-version-tracking-automation-plan.md
docs/testing/: AUTO_UPDATE_TESTING.md  TESTING_GUIDE.md
scripts/: generate-update-manifest.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_agent.rs  commands.rs  db.rs  grok.rs  grok_commands.rs  keychain.rs  lib.rs  main.rs  models.rs  notification.rs  quick_entry.rs  scanner.rs  scanner_commands.rs  scheduler.rs  scheduler_commands.rs  slash_commands.rs
src/components/: KanbanCard.tsx  KanbanColumn.tsx  ProjectSelector.tsx  Skeleton.tsx  Toast.tsx  TodoKanban.test.tsx  TodoKanban.tsx  UpdateChecker.tsx  VersionTracking.tsx  WhatsNew.tsx
src/hooks/: useAppEvents.ts  useSchedulerEvents.ts  useStoreSync.ts
src/lib/: api.ts  types.ts
src/pages/: Chat.tsx  (+6 more)
(+24 files in other folders)
